...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Sign in'),
        centerTitle: true,
      ),
      body: SafeArea(
        bottom: false,
        child: Padding(
          padding: EdgeInsets.only(
...
                                  style: ElevatedButton.styleFrom(
                                    backgroundColor: Colors.amber.shade700,
                                    foregroundColor: Colors.black87,
                                    shape: RoundedRectangleBorder(
                                        borderRadius: BorderRadius.circular(8)),
                                  ),
                                  key: const Key('authSubmitSignIn'),
                                  onPressed: _loading
                                      ? null
                                      : () async {
                                          final email = emailCtl.text.trim();
                                          final pwd = pwdCtl.text;
                                          if (email.isEmpty || pwd.isEmpty) {
...
